--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "API RESTful en Flask. Este es el código del taller para crear una API REST con Flask, se crea un CRUD básico y se almacenan los datos en base de datos utilizando el ORM SQLAlchemy.",
   "main": "index.js",
+  "cacheDirectories": [
+    "/node_modules"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "heroku-postbuild": "npm install && npm run build"
   },
   "repository": {
     "type": "git",
