--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+amqp==5.1.1
 aniso8601==9.0.1
+billiard==3.6.4.0
+celery==5.2.6
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 Flask==2.1.2
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.9
@@ -9,13 +15,17 @@ gunicorn==20.1.0
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kombu==5.2.4
 MarkupSafe==2.1.1
 marshmallow==3.15.0
 marshmallow-sqlalchemy==0.28.0
 packaging==21.3
+prompt-toolkit==3.0.29
 pyparsing==3.0.8
 pytz==2022.1
 six==1.16.0
 SQLAlchemy==1.4.36
+vine==5.0.0
+wcwidth==0.2.5
 Werkzeug==2.1.2
 zipp==3.8.0
