--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+ffmpeg==1.4
 Flask==2.1.2
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.9
