--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ kombu==5.2.4
 MarkupSafe==2.1.1
 marshmallow==3.15.0
 marshmallow-sqlalchemy==0.28.0
+newrelic==7.10.0.175
 packaging==21.3
 prompt-toolkit==3.0.29
 pyparsing==3.0.8
